--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
 .welcomeContainer {
   display: flex;
   align-items: center;
-  background-image: url('../assets/images/medico.png');
+  background-image: url('../assets/images/medico_1.png');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 50px 50px;
@@ -47,7 +47,7 @@
 
 #welcome {
   margin-left: 250px;
-  width: 30%;
+  width: 50%;
   padding: 40px;
   color: #356283;
 }
@@ -144,12 +144,13 @@
   text-align: center;
   margin-left: 100px;
   margin-top: 0;
+  margin-bottom: 50px;
 }
 
 .googleMaps #addressContainer hr{
   margin-bottom: 50px;
   height: 5px;
-  width: 600px;
+  width: 400px;
   background-color: white;
 }
 
