--- a/css/style.css
+++ b/css/style.css
@@ -5,23 +5,24 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.menuBar {
+header .menuBar {
   background-color: #57a3db;
   height: 45px;
+  width: 100%;
 }
 
-.menuBar ul {
+header .menuBar ul {
   list-style: none;
   color: white;
   float: right;
 }
 
-.menuBar ul li {
+header .menuBar ul li {
   display: inline-block;
   margin-right: 10px;
 }
 
-.menuBar ul li a {
+header .menuBar ul li a {
   text-decoration: none;
   font-weight: bold;
   color: white;
@@ -31,38 +32,45 @@
   transition: background 0.6s;
 }
 
-.menuBar ul li a:hover {
+header .menuBar ul li a:hover {
   color: #356283;
 }
 
 .welcomeContainer {
   display: flex;
   align-items: center;
-  background-image: url('../assets/images/medico_1.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: 50px 50px;
-
+  width: 100%;
 }
 
 #welcome {
-  margin-left: 250px;
-  width: 50%;
-  padding: 40px;
-  color: #356283;
+  background-image: url("../assets/images/medico_2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 50vw;
+  height: 100vh;
 }
-
-
+/* 
+#welcome h1 {
+  position: absolute;
+  color: #356283;
+  text-align: center;
+  top: 320px;
+  left: 255px;
+  margin: auto;
+  height: auto;
+  width: 400px;
+} */
 
 #imgLogo {
-  margin-right: 250px;
+  width: 50vw;
 }
 
 .clinicContainer {
+  width: 100%;
   text-align: center;
   color: white;
   padding: 20px;
-  margin-top: 70px;
+  /* margin-top: 10px; */
   background-color: #98b4cd;
 }
 
@@ -72,11 +80,13 @@
 }
 
 .clinicContainer img {
-  width: 600px;
+  width: 50vw;
+  max-width: 600px;
   margin: 30px;
 }
 
 .contactContainer {
+  width: 100%;
   color: #356283;
   margin-top: 150px;
 }
@@ -91,7 +101,7 @@
   text-decoration: none;
   margin-top: 30px;
   display: flex;
-  width: 500px;
+  max-width: 500px;
 }
 
 .contactLinks p {
@@ -108,7 +118,7 @@
 .contactPhone {
   margin-top: 30px;
   display: flex;
-  width: 500px;
+  max-width: 500px;
 }
 
 .contactPhone p {
@@ -117,12 +127,63 @@
   margin: auto;
 }
 
-.localizationContainer {
+.servicesContainer {
+  width: 100%;
   text-align: center;
   color: white;
   margin-top: 150px;
-  /* background-color: #658fb3; */
+  padding: 20px;
+  background-color: #eaf4fb;
+}
+
+.servicesContainer h2 {
+  color: #356283;
+}
+
+.servicesContainer ul {
+  list-style: none;
+}
+
+.servicesStructure {
+  display: flex;
+  align-items: center;
+  margin: auto;
+  width: 70vw;
+}
+
+.servicesList {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  /* display: flex;
+  align-items: flex-start; */
+  width: 300px;
+  height: 250px;
   background-color: #658fb3;
+  border-radius: 10px;
+}
+
+.servicesList img {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.servicesList h3 {
+  margin-bottom: 20px;
+  font-size: 1.5rem;
+}
+
+.servicesList ul li {
+  font-size: 18px;
+  line-height: auto;
+  margin-bottom: 5px;
+  max-width: 500px;
+}
+
+.localizationContainer {
+  width: 100%;
+  text-align: center;
+  color: #356283;
+  margin-top: 70px;
   padding: 20px;
 }
 
@@ -139,19 +200,29 @@
 
 .googleMaps #address {
   float: left;
-  width: 400px;
+  width: 50vw;
+  max-width: 300px;
   font-size: 22px;
   text-align: center;
-  margin-left: 100px;
+  /* margin-left: 100px; */
   margin-top: 0;
   margin-bottom: 50px;
 }
 
-.googleMaps #addressContainer hr{
+.googleMaps #addressContainer {
+  display: block;
+}
+
+.googleMaps #addressContainer h4 {
+  margin-left: 250px;
+}
+
+.googleMaps #addressContainer hr {
   margin-bottom: 50px;
   height: 5px;
-  width: 400px;
-  background-color: white;
+  width: 50vw;
+  max-width: 300px;
+  background-color: #658fb3;
 }
 
 /* css responsivity to mobile */
