--- a/css/style.css
+++ b/css/style.css
@@ -214,13 +214,14 @@ header .menuBar ul li a:hover {
 }
 
 .googleMaps #addressContainer h4 {
-  margin-left: 250px;
+ width: 50vw;
 }
 
 .googleMaps #addressContainer hr {
+  position: relative;
   margin-bottom: 50px;
   height: 5px;
-  width: 50vw;
+  width: 100%;
   max-width: 300px;
   background-color: #658fb3;
 }
